<resources>
    <string name="app_name">Marvel Wiki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marvel Wiki</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="tab_article">Article</string>
    <string name="tab_edit">Edit</string>
    <string name="tab_history">History</string>

    <string name="wiki_title">Loading...</string>
    <string name="wiki_date"></string>
    <string name="wiki_source">Source</string>

    <string name="welcome_message">Welcome to the Marvel Wiki!</string>
    <string name="build_version">Dev build 0.1.3</string>

    <string name="edit_hint">Enter your text here&#8230;</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="header">Header</string>
    <string name="quote">Quote</string>
    <string name="list">List</string>
    <string name="linebreak">Linebreak</string>
    <string name="link">Link</string>
    <string name="image">Image</string>

</resources>
